--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,36 @@
 body{
-    background-color: rgb(25, 25, 114);
-}
-.image{
-    margin-top: 100px;
+    background-color: rgb(63, 21, 163);
 }
 
-img{
-    border-radius: 50%;
-}
-
-.name h1{
-    font-size: 52px;
+.name{
+    font-size: 1000%;
     color: white;
-    text-shadow: 2px 2px black;
-    
+    text-shadow: 8px 8px rgb(15, 15, 68);
+    width: 50%;
+    float: left;
+    margin-left: 10%;
+    margin-right: -5%;
+    margin-top: 5%;
+}
+#image{
+    margin-top: 4%;
+    margin-right: 15%;
+    float: right;
+}
+/*.links{
+    align-content: center;
+}*/
+.begining{
+    height: 80vh;
+}
+button{
+    font-size: 170%;
+    border-radius: 8px;
+    border-style: solid;
+    margin-bottom: 15px;
+}
+footer{
+    background-color: rgb(1, 1, 88);
+    font-size: 150%;
+    color: rgb(41, 41, 165);
 }
