--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,17 @@
 body{
-    background-color: rgb(63, 21, 163);
+    background-color: rgb(34, 34, 34);
 }
 
 .name{
     font-size: 1000%;
-    color: white;
-    text-shadow: 8px 8px rgb(15, 15, 68);
-    width: 50%;
-    float: left;
-    margin-left: 10%;
+    color: #32CD32;
+    text-shadow: 8px 8px rgb(0, 0, 0);
+    margin-bottom: -1%;
+    /*width: 50%;
+    float: left;*/
+    /*margin-left: 10%;
     margin-right: -5%;
-    margin-top: 5%;
+    margin-top: 5%;*/
 }
 #image{
     margin-top: 4%;
@@ -20,17 +21,25 @@ body{
 /*.links{
     align-content: center;
 }*/
+.info{
+    color: white;
+    font-size: 200%;
+}
 .begining{
-    height: 80vh;
+    margin-bottom: 3%;
 }
 button{
-    font-size: 170%;
+    font-size: 200%;
     border-radius: 8px;
-    border-style: solid;
+    border: none;
     margin-bottom: 15px;
 }
+button:hover{
+    /*background-color: rgb(180, 180, 180);*/
+    box-shadow: inset 0 0 10px rgb(80, 80, 80);
+}
 footer{
-    background-color: rgb(1, 1, 88);
-    font-size: 150%;
-    color: rgb(41, 41, 165);
+    background-color: rgb(34, 34, 34);
+    font-size: 200%;
+    color: rgb(9, 61, 21);
 }
