--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,15 +28,16 @@ body{
 .begining{
     margin-bottom: 3%;
 }
-button{
-    font-size: 200%;
-    border-radius: 8px;
-    border: none;
-    margin-bottom: 15px;
+.buttons:hover{
+    transform: translate(0px, -20%);
 }
-button:hover{
-    /*background-color: rgb(180, 180, 180);*/
-    box-shadow: inset 0 0 10px rgb(80, 80, 80);
+.buttons{
+    transition: transform .1s;
+    border: none;
+    width: 4%;
+    margin-top: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 footer{
     background-color: rgb(34, 34, 34);
