--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@ body{
 }
 
 .name{
-    font-size: 1000%;
+    font-size: 11vw;
     color: #32CD32;
     text-shadow: 8px 8px rgb(0, 0, 0);
     margin-bottom: -1%;
@@ -23,13 +23,15 @@ body{
 }*/
 .info{
     color: white;
-    font-size: 200%;
+    font-size: 2.5vw;
 }
 .begining{
     margin-bottom: 3%;
 }
 .buttons:hover{
-    transform: translate(0px, -20%);
+    transform: translate(0px, -10px);
+    border-bottom: 10px solid transparent;
+    margin-bottom: -10px;
 }
 .buttons{
     transition: transform .1s;
@@ -38,6 +40,45 @@ body{
     margin-top: 5%;
     margin-left: 2%;
     margin-right: 2%;
+}
+#test{
+    color: white;
+}
+.projectbounds{
+    margin-left: 5%;
+    width: 90%;
+}
+.head{
+    color: white;
+    font-size: 7vw;
+}
+.project{
+    width: 17%;
+    float: left;
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-bottom: 10%;
+    box-shadow: 0px 0px 2px 3px #404040;
+}
+.projectimg{
+    width: 90%;
+    margin-top: 5%;
+    margin-left: 5%;
+}
+.projectname{
+    color: white;
+    margin-left: 5%;
+    margin-top: 5%;
+    margin-bottom: 0%;
+}
+.language{
+    color: beige;
+    margin-left: 5%;
+}
+.desc{
+    color: white;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 footer{
     background-color: rgb(34, 34, 34);
