--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,9 +18,6 @@ body{
     margin-right: 15%;
     float: right;
 }
-/*.links{
-    align-content: center;
-}*/
 .info{
     color: white;
     font-size: 2.5vw;
@@ -62,8 +59,17 @@ body{
 }
 .projectimg{
     width: 90%;
+    height: auto;
     margin-top: 5%;
     margin-left: 5%;
+}
+.aligner{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+.imgbounds{
+    height: 15vw;
 }
 .projectname{
     color: white;
@@ -79,6 +85,19 @@ body{
     color: white;
     margin-left: 5%;
     margin-right: 5%;
+}
+.code{
+    margin-left: 5%;
+    margin-bottom: 5%;
+    background: #32CD32;
+    border: 0px;
+    width: 40%;
+    font-size: 1.5vw;
+    height: 5vh;
+    border-radius: 8px;
+}
+.code:hover{
+    box-shadow: inset 0px 0px 2px 2px rgb(23, 92, 23);
 }
 footer{
     background-color: rgb(34, 34, 34);
